# aha-agate

./: .dockerignore  .gitmodules  Dockerfile
.github/workflows/: dockerimage.yml  regression.yml
BufferMapping/script/: new_input.json
Halide-to-Hardware/: .travis.yml  INSTALL.md  Makefile  USAGE.md
Halide-to-Hardware/src/: CodeGen_Clockwork_Target.cpp  CodeGen_CoreHLS.cpp  CodeGen_CoreIR_Target.cpp  CodeGen_RDAI.cpp  CodeGen_RDAI.h  CoreIRCompute.cpp  UBufferRewrites.cpp
Lego_v0/: .gitignore  README.md  codegen.py  diff_check.py  docker_create.sh  einsum.py  gold_cgen.py  jssc_input_gen.py  lego_ctest.py  lego_jssc.py  lego_onyx_codegen.sh  lego_onyx_matmul_codegen.sh  lego_test_dense.sh  lego_test_sparse.sh  main.py  pre_process.py  setup.py
Lego_v0/input/: bitstream.bs  design_meta.json  program.txt  reg_write.h  tensor.txt
Lego_v0/jssc_inputs/: jssc_mat_elemmul.json  jssc_mat_vecmul.json  jssc_matmul_input.json
Lego_v0/onyx_codegen/: bs_to_h.py  generate_linker.py  generate_reg_write.py  generate_unrolling.py  io_placement.py  main_codegen.py  meta.py
Lego_v0/scripts/: check_gold.py  run_gin_tiling.py
Lego_v0/src/: activation.cpp  activation.h  cg_mem_op.cpp  cg_mem_op.h  data_def.h  data_parser.cpp  data_parser.h  mem_op.h  (+1 more)
cgra_pnr/thunder/lib/leidenalg/: .gitignore  CMakeLists.txt
cgra_pnr/thunder/lib/leidenalg/.github/workflows/: linux.yml  macos.yml
cgra_pnr/thunder/lib/leidenalg/cmake/: FindIGRAPH.cmake
cgra_pnr/thunder/lib/leidenalg/include/: MutableVertexPartition.h
clockwork/: build_set_test.cpp  clockwork_standard_compute_units.h  codegen.cpp  coreir_backend.cpp  example_progs.h  prog.cpp  prog.h  ubuffer.cpp  ubuffer.h
fault/: setup.py
garnet/: conftest.py  conftest_amber.py  requirements.txt
mflowgen/: configure
(+867 files in other folders)
